# ml-bidirection-compression

./: README.md  bd_compression_report.ipynb  bidirectional_compression_report.ipynb  comparison.ipynb  linear_regression.ipynb  pyproject.toml
